# lattice

./: .gitignore  Cargo.toml
src/: app.rs  main.rs
